--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=fallback');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=fallback");
 
-@import 'tailwindcss';
-@import './additional-styles/flatpickr.css';
-@import './additional-styles/utility-patterns.css' layer(components);
+@import "tailwindcss";
+@import "./additional-styles/flatpickr.css";
+@import "./additional-styles/utility-patterns.css" layer(components);
 
 @plugin "@tailwindcss/forms" {
   strategy: base;
